2001-10-08  Rob Browning  <rlb@defaultvalue.org>

	* gc.c: support ia64 register backing store.
	(SCM_MARK_BACKING_STORE): new macro.

	* continuations.h: support ia64 register backing store.
	(struct scm_t_contregs): add ia64 register backing store.

	* continuations.c: support ia64 register backing store.
	(continuation_mark): mark ia64 register backing store.
	(continuation_free): free ia64 register backing store.
	(scm_make_continuation): capture ia64 register backing store.
	(copy_stack_and_call): copy ia64 register backing store.

2001-10-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* hashtab.c (scm_hash_fn_create_handle_x):  The result of assoc_fn
	is known to be #f if no entry is found.  Thus, use !SCM_FALSEP
	instead of SCM_NIMP to test for that case.

	* strings.h (SCM_SET_STRING_LENGTH):  Cast the length to
	scm_t_bits instead of long.

2001-10-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h (SCM_T_BITS_MAX, SCM_T_SIGNED_BITS_MAX,
	SCM_T_SIGNED_BITS_MIN): New.
	* numbers.h (SCM_MOST_POSITIVE_FIXNUM, SCM_MOST_NEGATIVE_FIXNUM):
	Use them to make these macros computable by the preprocessor.

	* num2integral.i.c (INTEGRAL2NUM): Let the preprocessor test
	whether the integral type fits in a fixnum, not the compiler.
	This removes a spurious compiler warning.  Also, honor the
	NO_PREPRO_MAGIC flag to suppress any preprocessor tests.  This is
	needed for `long long's.

	* numbers.c: Define NO_PREPRO_MAGOC when including
	num2integral.c.i for `long long' and `signed long long'.

2001-10-06  Mikael Djurfeldt  <mdj@linnaeus>

	These changes fixes a race condition in the Guile coop - pthread
	compatibility code.
	
	* coop.c (mother_awake_p): New variable.
	(coop_create): Set mother_awake_p before creating or signalling
	mother; wait until mother is going to sleep before returning.
	(mother): Reset mother_awake_p before going to sleep.

2001-10-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* options.c (protected_objects, scm_init_options):  The content of